--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Site wide configuration
 
-title: Academic Website of Ted Laderas
+title: Academic Website of Anirudh Chintalapani
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Ted Laderas
+  name: Anirudh Chintalapani
   avatar: bio-photo.jpg
-  bio: "This is a sample Jekyll academic website."
-  email: laderast@ohsu.edu
+  bio: "I am a second year clinical informatics fellow"
+  email: chiani0605@gmail.com
   # Do not include the @ symbol in your Twitter username
-  twitter: laderast
+  twitter: siddarth0605
   linkedin: #username
-  github: laderast
+  github: siddarth0605
   orcid: # ID Number (ex. 0000-0000-0000-0000)
   researchgate: #username
   mendeley: #username
